removing not needed js on external layout, fixing internal styling to use external, fixing site link being too long in listings index view

--- a/app/assets/stylesheets/edit_listings.sass
+++ b/app/assets/stylesheets/edit_listings.sass
@@ -25,3 +25,8 @@ img.key_photo
 
   .control-group
     display: inline-block
+
+
+.listing-link
+  width: 80%
+  overflow-x: auto
